WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95269
crypto.getRandomValues should throw an exception when given a big array
https://bugs.webkit.org/show_bug.cgi?id=95269
Summary
crypto.getRandomValues should throw an exception when given a big array
Adam Barth
Reported
2012-08-28 17:41:29 PDT
crypto.getRandomValues should throw an exception when given a big array
Attachments
Patch
(3.95 KB, patch)
2012-08-28 17:42 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-08-28 17:42:46 PDT
Created
attachment 161101
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-08-28 17:46:58 PDT
Comment on
attachment 161101
[details]
Patch OK.
WebKit Review Bot
Comment 3
2012-08-28 19:24:23 PDT
Comment on
attachment 161101
[details]
Patch Rejecting
attachment 161101
[details]
from review queue.
eric@webkit.org
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 4
2012-08-28 19:26:53 PDT
Comment on
attachment 161101
[details]
Patch Rejecting
attachment 161101
[details]
from commit-queue.
eric@webkit.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 5
2012-08-28 20:53:30 PDT
Comment on
attachment 161101
[details]
Patch Clearing flags on attachment: 161101 Committed
r126953
: <
http://trac.webkit.org/changeset/126953
>
WebKit Review Bot
Comment 6
2012-08-28 20:53:33 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7
2012-08-28 22:03:41 PDT
Comment on
attachment 161101
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=161101&action=review
> LayoutTests/security/crypto-random-values-limits.html:20 > + var largeArray = new Uint8Array(66000);
If the limit is specified in the spec, then I’d suggest that the test case also tries both the largest size that is allowed and the smallest size that is not allowed.
Adam Barth
Comment 8
2012-08-29 00:47:09 PDT
(In reply to
comment #7
)
> (From update of
attachment 161101
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=161101&action=review
> > > LayoutTests/security/crypto-random-values-limits.html:20 > > + var largeArray = new Uint8Array(66000); > > If the limit is specified in the spec, then I’d suggest that the test case also tries both the largest size that is allowed and the smallest size that is not allowed.
That's a good idea. The limit is in the spec.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug